--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=scheduler-base
 # =========================
 # DATASOURCE SQL SERVER
 # =========================
-spring.datasource.url=jdbc:sqlserver://192.168.1.196:1433;databaseName=UVICAR_0;encrypt=true;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://192.168.1.180:1433;databaseName=UVICAR_0;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
-spring.datasource.password=SofTrack*9278
+spring.datasource.password=P01nTr4ck*9278
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # No usar schema.sql ni data.sql
@@ -36,3 +36,6 @@ management.health.db.enabled=false
 # SERVER
 # =========================
 server.port=8081
+jobs.seed.use-templates=true
+jobs.seed.templates.location=classpath:seed/transmission-templates.json
+jobs.seed.allowed-cod-uni=24794,19207,-31865,32019,23737
