--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,7 @@ spring.sql.init.mode=never
 uvicar.transmissions.table=tTransmisiones
 uvicar.transmissions.last-minutes=10
 uvicar.transmissions.top=200
+uvicar.reports.clientes-grandes.sin-trans-3dias.sp=pa_RptUniActSinTrans3Dias_ClientesGrandes
 
 # =========================
 # JOBS
